[gd_scene load_steps=26 format=2]

[ext_resource path="res://Textures/table.png" type="Texture" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://WhiteBall.tscn" type="PackedScene" id=4]
[ext_resource path="res://wall_physicsmaterial.tres" type="PhysicsMaterial" id=5]
[ext_resource path="res://Textures/ball 1.png" type="Texture" id=6]
[ext_resource path="res://Textures/ball 2.png" type="Texture" id=7]
[ext_resource path="res://Textures/ball 3.png" type="Texture" id=8]
[ext_resource path="res://Textures/ball_13.png" type="Texture" id=9]
[ext_resource path="res://Textures/ball_14.png" type="Texture" id=10]
[ext_resource path="res://Textures/ball_15.png" type="Texture" id=11]
[ext_resource path="res://Textures/ball_5.png" type="Texture" id=12]
[ext_resource path="res://Textures/ball_6.png" type="Texture" id=13]
[ext_resource path="res://Textures/ball 4.png" type="Texture" id=14]
[ext_resource path="res://Textures/ball_10.png" type="Texture" id=15]
[ext_resource path="res://Textures/ball_8.png" type="Texture" id=16]
[ext_resource path="res://Textures/ball_9.png" type="Texture" id=17]
[ext_resource path="res://Textures/ball_7.png" type="Texture" id=18]
[ext_resource path="res://Textures/ball_11.png" type="Texture" id=19]
[ext_resource path="res://Textures/ball_12.png" type="Texture" id=20]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.5526, 257 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 248.134, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 254, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 257 )

[sub_resource type="CircleShape2D" id=5]
radius = 32.8797

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Table" type="Sprite" parent="."]
position = Vector2( 642.404, 367.11 )
scale = Vector2( 0.27935, 0.27935 )
texture = ExtResource( 1 )

[node name="WhiteBall" parent="." instance=ExtResource( 4 )]
position = Vector2( 974.012, 358.005 )

[node name="Walls" type="Node2D" parent="."]

[node name="Wall0" type="StaticBody2D" parent="Walls"]
physics_material_override = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Walls/Wall0"]
position = Vector2( 34.262, 361.371 )
shape = SubResource( 1 )

[node name="Wall1" type="StaticBody2D" parent="Walls"]
physics_material_override = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Walls/Wall1"]
position = Vector2( 351.462, 33.1191 )
shape = SubResource( 2 )

[node name="Wall2" type="StaticBody2D" parent="Walls"]
physics_material_override = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Walls/Wall2"]
position = Vector2( 918.654, 33.1191 )
shape = SubResource( 3 )

[node name="Wall3" type="StaticBody2D" parent="Walls"]
physics_material_override = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Walls/Wall3"]
position = Vector2( 1246.81, 360.748 )
shape = SubResource( 4 )

[node name="Wall4" type="StaticBody2D" parent="Walls"]
physics_material_override = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Walls/Wall4"]
position = Vector2( 352.462, 691 )
shape = SubResource( 2 )

[node name="Wall5" type="StaticBody2D" parent="Walls"]
physics_material_override = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape2D" parent="Walls/Wall5"]
position = Vector2( 918.654, 691 )
shape = SubResource( 3 )

[node name="Balls" type="Node2D" parent="."]

[node name="Ball1" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 439.094, 361.651 )

[node name="Sprite" parent="Balls/Ball1" index="0"]
texture = ExtResource( 6 )

[node name="Ball2" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 401.768, 384.108 )

[node name="Sprite" parent="Balls/Ball2" index="0"]
texture = ExtResource( 7 )

[node name="Ball3" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 401.376, 340.21 )

[node name="Sprite" parent="Balls/Ball3" index="0"]
texture = ExtResource( 8 )

[node name="Ball4" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 364.017, 403.324 )

[node name="Sprite" parent="Balls/Ball4" index="0"]
texture = ExtResource( 14 )

[node name="Ball5" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 363.625, 361.045 )

[node name="Sprite" parent="Balls/Ball5" index="0"]
texture = ExtResource( 12 )

[node name="Ball6" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 363.574, 318.085 )

[node name="Sprite" parent="Balls/Ball6" index="0"]
texture = ExtResource( 13 )

[node name="Ball7" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 326.595, 424.303 )

[node name="Sprite" parent="Balls/Ball7" index="0"]
texture = ExtResource( 18 )

[node name="Ball8" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 326.811, 381.797 )

[node name="Sprite" parent="Balls/Ball8" index="0"]
texture = ExtResource( 16 )

[node name="Ball9" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 325.811, 339.899 )

[node name="Sprite" parent="Balls/Ball9" index="0"]
texture = ExtResource( 17 )

[node name="Ball10" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 326.419, 297.393 )

[node name="Sprite" parent="Balls/Ball10" index="0"]
texture = ExtResource( 15 )

[node name="Ball11" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 288.009, 444.252 )

[node name="Sprite" parent="Balls/Ball11" index="0"]
texture = ExtResource( 19 )

[node name="Ball12" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 288.617, 402.53 )

[node name="Sprite" parent="Balls/Ball12" index="0"]
texture = ExtResource( 20 )

[node name="Ball13" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 288.617, 361.024 )

[node name="Sprite" parent="Balls/Ball13" index="0"]
texture = ExtResource( 9 )

[node name="Ball14" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 288.617, 317.95 )

[node name="Sprite" parent="Balls/Ball14" index="0"]
texture = ExtResource( 10 )

[node name="Ball15" parent="Balls" instance=ExtResource( 2 )]
position = Vector2( 289.617, 275.836 )

[node name="Sprite" parent="Balls/Ball15" index="0"]
texture = ExtResource( 11 )

[node name="Holes" type="Node2D" parent="."]

[node name="Hole0" type="Area2D" parent="Holes"]
position = Vector2( 66, 76 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape2D" parent="Holes/Hole0"]
position = Vector2( -17, -18 )
shape = SubResource( 5 )

[node name="Hole1" type="Area2D" parent="Holes"]
position = Vector2( 635, 59 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Holes/Hole1"]
position = Vector2( -1, -26 )
shape = SubResource( 5 )

[node name="Hole2" type="Area2D" parent="Holes"]
position = Vector2( 1209, 76 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Holes/Hole2"]
position = Vector2( 20, -18 )
shape = SubResource( 5 )

[node name="Hole3" type="Area2D" parent="Holes"]
position = Vector2( 66, 661 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Holes/Hole3"]
position = Vector2( -19, 18 )
shape = SubResource( 5 )

[node name="Hole4" type="Area2D" parent="Holes"]
position = Vector2( 635, 676 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Holes/Hole4"]
position = Vector2( -1, 25 )
shape = SubResource( 5 )

[node name="Hole5" type="Area2D" parent="Holes"]
position = Vector2( 1210, 661 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape2D" parent="Holes/Hole5"]
position = Vector2( 16, 19 )
shape = SubResource( 5 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI"]
margin_left = 312.0
margin_top = 14.0
margin_right = 392.0
margin_bottom = 54.0
rect_min_size = Vector2( 80, 40 )
text = "Reset"

[connection signal="white_entered_hole" from="WhiteBall" to="." method="_on_white_entered_hole"]
[connection signal="entered_hole" from="Balls/Ball1" to="." method="_on_Ball_entered_hole" binds= [ 1 ]]
[connection signal="entered_hole" from="Balls/Ball2" to="." method="_on_Ball_entered_hole" binds= [ 2 ]]
[connection signal="entered_hole" from="Balls/Ball3" to="." method="_on_Ball_entered_hole" binds= [ 3 ]]
[connection signal="entered_hole" from="Balls/Ball4" to="." method="_on_Ball_entered_hole" binds= [ 4 ]]
[connection signal="entered_hole" from="Balls/Ball5" to="." method="_on_Ball_entered_hole" binds= [ 5 ]]
[connection signal="entered_hole" from="Balls/Ball6" to="." method="_on_Ball_entered_hole" binds= [ 6 ]]
[connection signal="entered_hole" from="Balls/Ball7" to="." method="_on_Ball_entered_hole" binds= [ 7 ]]
[connection signal="entered_hole" from="Balls/Ball8" to="." method="_on_Ball_entered_hole" binds= [ 8 ]]
[connection signal="entered_hole" from="Balls/Ball9" to="." method="_on_Ball_entered_hole" binds= [ 9 ]]
[connection signal="entered_hole" from="Balls/Ball10" to="." method="_on_Ball_entered_hole" binds= [ 10 ]]
[connection signal="entered_hole" from="Balls/Ball11" to="." method="_on_Ball_entered_hole" binds= [ 11 ]]
[connection signal="entered_hole" from="Balls/Ball12" to="." method="_on_Ball_entered_hole" binds= [ 12 ]]
[connection signal="entered_hole" from="Balls/Ball13" to="." method="_on_Ball_entered_hole" binds= [ 13 ]]
[connection signal="entered_hole" from="Balls/Ball14" to="." method="_on_Ball_entered_hole" binds= [ 14 ]]
[connection signal="entered_hole" from="Balls/Ball15" to="." method="_on_Ball_entered_hole" binds= [ 15 ]]
[connection signal="pressed" from="UI/Button" to="." method="_on_Button_pressed"]

[editable path="Balls/Ball1"]
[editable path="Balls/Ball2"]
[editable path="Balls/Ball3"]
[editable path="Balls/Ball4"]
[editable path="Balls/Ball5"]
[editable path="Balls/Ball6"]
[editable path="Balls/Ball7"]
[editable path="Balls/Ball8"]
[editable path="Balls/Ball9"]
[editable path="Balls/Ball10"]
[editable path="Balls/Ball11"]
[editable path="Balls/Ball12"]
[editable path="Balls/Ball13"]
[editable path="Balls/Ball14"]
[editable path="Balls/Ball15"]
